# _devBooks

./: .prettierignore  README.md
_pRust2/quickereplace/: Cargo.toml
_rServicesApps/: Cargo.toml
_rServicesApps/src/: main.rs
_rWebRocket/: Cargo.toml
_rWebRocket/02_complex_program/: Cargo.toml
_rWebRocket/02_complex_program/src/: main.rs
_rWebRocket/02complex_program/: Cargo.toml
_rWebRocket/02complex_program/src/encryptor/: rot13.rs
_rWebRocket/03_package/: Cargo.toml
_rWebRocket/03_package/src/: lib.rs  main.rs
_rWebRocket/03_package/src/cipher/: mod.rs  rot13.rs  rsa.rs
_rWebRocket/03_package/src/encryptor/: mod.rs
_rWebRocket/03package/src/cipher/: mod.rs  rot13.rs
_rWebRocket/04hello_rocket/: Cargo.toml
_rWebRocket/04hello_rocket/src/: main.rs
_rWebRocket/05hello_rocket_async/: Cargo.toml  Rocket.toml
_rWebRocket/05hello_rocket_async/src/: main.rs
_rWebRocket/06req_res/: Cargo.toml
_rWebRocket/06req_res/src/: main.rs
_rWebRocket/07route_handlers/: Cargo.toml
_rWebRocket/07route_handlers/src/: main.rs
_rWebRocket/08managedState/: Cargo.toml
_rWebRocket/08managedState/src/: main.rs
_rWebRocket/encryptor/: Cargo.toml  rot13.rs
_rWebRocket/encryptor/src/: main.rs  mod.rs
_rWebRocket/src/: main.rs
_rsPL/: Cargo.toml
_rsPL/hello_world/: Cargo.toml
_rsPL/src/: 002variables.rs  005boolean.rs  006charType.rs  007tupleCompound.rs  008arrayType.rs  010funcParas.rs  011statement.rs  012funcReturn.rs  013comments.rs  014branches.rs  main.rs
_theRoadToReact/: README.md
_zero2Prod/: Cargo.toml
(+71 files in other folders)
