[workspace]
members = ["encryptor"]
[package]
name = "_rWebRocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "01_hello_world"
path = "src/bin/01_hello_world.rs"

[[bin]]
name = "02_complex_program"
path = "src/bin/02_complex_program.rs"
