workspace = { members = ["01hello_world", "02complex_program", "03package", "04hello_rocket", "05hello_rocket_async", "06req_res", "07route_handlers"] }
[package]
name = "_rWebRocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

