[package]
name = "package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5.0"
rand = "0.8.4"
base64 = "0.13.0"

[lib]
name = "package"
path = "src/lib.rs"

[[bin]]
name = "package"
path = "src/main.rs"